--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -142,6 +142,7 @@
     {% include 'binary-setting.html' with {'label': 'Enable local account creation', 'slug': 'local_register'} %}
     {% include 'binary-setting.html' with {'label': 'Admins can create local accounts', 'slug': 'admins_create_users'} %}
     {% include 'binary-setting.html' with {'label': 'Show local login form', 'slug': 'local_login', 'help': 'You can still show the local login form by appending ?letmein to the login page URL.'} %}
+  </div>
 
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Information'|trans }}</h3>
   <div class='pl-3'>
